@@ -5,6 +5,7 @@ unreleased
 - export transport running state via PCM D-Bus interface
 - optional non-dynamic operation mode for ALSA control plug-in
 - optional extended controls for ALSA control plug-in
+- change RFCOMM D-Bus API features property to array of strings
 - fix for volume control for HSP-HS and HFP-HF profiles
 
 bluez-alsa v4.0.0 (2022-06-03)
